--- a/main.css
+++ b/main.css
@@ -1,27 +1,61 @@
-/*Reset the body and html*/
+/* Reset the body and html */
 body,
 html {
 	margin: 0px;
 	padding: 0px;
 	height: 100%;
 	background: url('assets/footer_lodyas.png');
-	color: white;
 }
 
+/* Layout Styles */
 #container {
 	width: 900px;
 	max-width: 100%;
 	margin: 0 auto;
 	height: 100%;
-	opacity: .5;
+}
+
+#header {
+	margin: 0px 10px;
+}
+
+#header h1 {
+	color: #ffffff;
 }
 
 #leftSide {
 	float: left;
-	width: 50%;
 }
 
 #rightSide {
 	float: right;
-	width: 50%;
+}
+
+#leftSide, #rightSide {
+	width: 45%;
+	background-color: #ffffff;
+	margin: 10px;
+	min-height: 300px;
+	border-radius: 5px;
+}
+
+.sentence-container {
+	padding: 0px;
+	margin: 0px;
+}
+
+.sentence-container .sentence:first-child {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
+.sentence {
+	list-style: none;
+	padding: 10px 10px;
+	border-bottom: 1px solid #D0CCCC;
+	cursor: pointer;
+}
+
+.sentence:hover {
+	background-color: #F0EDED;
 }
